# https---github.com-mslawicz-F413-FreeRTOS-test

./: .mxproject  CMakeLists.txt  CMakePresets.json  F413-freertos-test.ioc  Makefile  README.md  STM32F413ZHTx_FLASH.ld  build.bat  openocd command.txt
Core/Inc/: FreeRTOSConfig.h  USB_rcv.h  logger.h  main.h  my_timer.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: USB_rcv.c  logger.c  main.c  my_timer.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
